--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "promise-facebook",
   "description": "The facebook SDK but with a promise api.",
-  "author": "François Frisch francoisfrisch@gmail.com",
-  "version": "0.0.3",
+  "author": {
+    "name": "François Frisch francoisfrisch@gmail.com"
+  },
+  "version": "0.1.0",
   "main": "index",
   "dependencies": {
-    "q": "^1.0.0"
+    "q": "^1.0.0",
+    "facebook-node-sdk":"git+https://github.com/Thuzi/facebook-node-sdk.git#v0.6.2"
   },
   "devDependencies": {
     "jshint": "~2.3.0",
